create content block of services

--- a/#src/index.html
+++ b/#src/index.html
@@ -16,7 +16,9 @@
     @@include('_intro.html')
     <!-- Sidebar -->
     @@include('_sidebar.html')
-
+    <!-- Services -->
+    @@include('_services.html')
+    
     <script src="js/script.min.js"></script>
 </body>
 </html>
