sevice created adaptive 1920 to 440px

--- a/#src/_services.html
+++ b/#src/_services.html
@@ -1,86 +1,86 @@
 <section class="services">
-    <!-- furniture block -->
-    <div class="services-block">
-        <!-- overlay item -->
-        <span class="services-block__f">F</span>
-        <!-- number of blocks -->
-        <div class="services-block__number">
-            01<span class="dot">.</span>
-        </div>
-        <div class="services-block__wrapper">    
-            <div class="container">
-                <div class="services-block__inner">
-                    <div class="block-content">
-                        <div class="block-lines">
-                            <div class="block-lines__title"></div>
-                            <div class="block-lines__subscribe"></div>
-                        </div>
-                        <div class="block-text">
-                            <h2 class="block-text__title">furniture</h2>
-                            <p class="block-text__subscribe">
-                                Wooder utilizes materials otherwise left behind, 
-                                rendered useless in their original intent. 
-                                By creating new pieces made of reclaimed barnwood
-                            </p>
-                            <div class="block-link">
-                                <a class="block-link__name">read more</a>
-                                <div class="block-link__icon">
-                                    <svg class="icon">
-                                        <use xlink:href="#right-arrow"></use>
-                                      </svg>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-image">
-                        <img class="block-image__img" src="img/furnure.jpg" alt="">
-                        <!-- img overlay text -->
-                        <div class="block-image__overlay">furniture</div>
-                    </div>
-                </div>
-            </div>
-        </div>   
-    </div>
-    <!-- decor block -->
-    <div class="services-block">
-        <!-- overlay item -->
-        <span class="services-block__f services-block__f_reverse">D</span>
-        <!-- number of blocks -->
-        <div class="services-block__number services-block__number_reverse">
-            02<span class="dot">.</span>
-        </div>
-        <div class="services-block__wrapper">    
-            <div class="container">
-                <div class="services-block__inner services-block__inner_reverse ">
-                    <div class="block-content block-content_reverse">
-                        <div class="block-lines block-lines_reverse ">
-                            <div class="block-lines__title"></div>
-                            <div class="block-lines__subscribe"></div>
-                        </div>
-                        <div class="block-text block-text_reverse">
-                            <h2 class="block-text__title">Decor</h2>
-                            <p class="block-text__subscribe">
-                                Wooder utilizes materials otherwise left behind, 
-                                rendered useless in their original intent. 
-                                By creating new pieces made of reclaimed barnwood
-                            </p>
-                            <div class="block-link">
-                                <a class="block-link__name">read more</a>
-                                <div class="block-link__icon">
-                                    <svg class="icon">
-                                        <use xlink:href="#right-arrow"></use>
-                                      </svg>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-image block-image_reverse">
-                        <img class="block-image__img" src="img/decor.jpg" alt="">
-                        <!-- img overlay text -->
-                        <div class="block-image__overlay block-image__overlay_reverse">decor</div>
-                    </div>
-                </div>
-            </div>
-        </div>   
-    </div>
+	<!-- furniture block -->
+	<div class="services-block">
+		<!-- overlay item -->
+		<span class="services-block__f">F</span>
+		<!-- number of blocks -->
+		<div class="services-block__number">01<span class="dot">.</span></div>
+		<div class="services-block__wrapper">
+			<div class="container-right">
+				<div class="services-block__inner">
+					<div class="block-content">
+						<div class="block-lines">
+							<div class="block-lines__title"></div>
+							<div class="block-lines__subscribe"></div>
+						</div>
+						<div class="block-text">
+							<h2 class="block-text__title">furniture</h2>
+							<p class="block-text__subscribe">
+								Wooder utilizes materials otherwise left behind, rendered
+								useless in their original intent. By creating new pieces made of
+								reclaimed barnwood
+							</p>
+							<div class="block-link">
+								<a class="block-link__name">read more</a>
+								<div class="block-link__icon">
+									<svg class="icon">
+										<use xlink:href="#right-arrow"></use>
+									</svg>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="block-image">
+						<img class="block-image__img" src="img/furnure.jpg" alt="" />
+						<!-- img overlay text -->
+						<div class="block-image__overlay">furniture</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- decor block -->
+	<div class="services-block">
+		<!-- overlay item -->
+		<span class="services-block__f services-block__f_reverse">D</span>
+		<!-- number of blocks -->
+		<div class="services-block__number services-block__number_reverse">
+			02<span class="dot">.</span>
+		</div>
+		<div class="services-block__wrapper">
+			<div class="container-right">
+				<div class="services-block__inner services-block__inner_reverse">
+					<div class="block-content block-content_reverse">
+						<div class="block-lines block-lines_reverse">
+							<div class="block-lines__title"></div>
+							<div class="block-lines__subscribe"></div>
+						</div>
+						<div class="block-text block-text_reverse">
+							<h2 class="block-text__title">Decor</h2>
+							<p class="block-text__subscribe">
+								Wooder utilizes materials otherwise left behind, rendered
+								useless in their original intent. By creating new pieces made of
+								reclaimed barnwood
+							</p>
+							<div class="block-link">
+								<a class="block-link__name">read more</a>
+								<div class="block-link__icon">
+									<svg class="icon">
+										<use xlink:href="#right-arrow"></use>
+									</svg>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="block-image block-image_reverse">
+						<img class="block-image__img" src="img/decor.jpg" alt="" />
+						<!-- img overlay text -->
+						<div class="block-image__overlay block-image__overlay_reverse">
+							decor
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
