created videos section + adaptive

--- a/#src/index.html
+++ b/#src/index.html
@@ -18,6 +18,8 @@
     @@include('_sidebar.html')
     <!-- Services -->
     @@include('_services.html')
+    <!-- Videos -->
+    @@include('_videos.html')
     
     <script src="js/script.min.js"></script>
 
