pre-finish develop front

--- a/#src/_videos.html
+++ b/#src/_videos.html
@@ -15,6 +15,7 @@
             <div class="videos-bar">
                 <!-- first video -->
                 <div class="videos-item">
+                    <div class="videos-item_overlay"></div>
                     <div class="videos-item__box">
                         <div class="box__wrapper">
                             <div class="box__video-img">
@@ -35,6 +36,7 @@
                 </div>
                 <!-- second video -->
                 <div class="videos-item">
+                    <div class="videos-item_overlay"></div>
                     <div class="videos-item__box">
                         <div class="box__wrapper">
                             <div class="box__video-img">
@@ -55,6 +57,7 @@
                 </div>
                 <!-- third video -->
                 <div class="videos-item">
+                    <div class="videos-item_overlay"></div>
                     <div class="videos-item__box">
                         <div class="box__wrapper">
                             <div class="box__video-img">
