--- a/#src/index.html
+++ b/#src/index.html
@@ -20,6 +20,12 @@
     @@include('_services.html')
     <!-- Videos -->
     @@include('_videos.html')
+    <!-- Video -->
+    @@include('_video.html')
+    <!-- About -->
+    @@include('_about.html')
+     <!-- Footer -->
+     @@include('_footer.html')
     
     <script src="js/script.min.js"></script>
 
