--- a/#src/_about.html
+++ b/#src/_about.html
@@ -1,37 +1,37 @@
-<section class="about">
-    <div class="container-right"> 
-        <div class="about__inner">
-            <div class="about-back">
-                <div class="about-back__letter">A</div>
-            </div>
-            <div class="about-img">
-                <div class="about-img__overlay">about us</div>
-                <img src="img/about-us-img.jpg" alt="">
-            </div>
-            <div class="about-content">
-                <div class="about-content__lines">
-                    <div class="block-lines__title"></div>
+<section class="about" id='about-arc'>
+	<div class="container-right">
+		<div class="about__inner">
+			<div class="about-back">
+				<div class="about-back__letter">A</div>
+			</div>
+			<div class="about-img">
+				<div class="about-img__overlay">about us</div>
+				<img src="img/about-us-img.jpg" alt="" />
+			</div>
+			<div class="about-content">
+				<div class="about-content__lines">
+					<div class="block-lines__title"></div>
 					<div class="block-lines__subscribe"></div>
-                </div>
-                <div class="about-content__subscribe">
-                    <div class="block-text">
-                        <h2 class="block-text__title">About us</h2>
-                        <p class="block-text__subscribe">
-                            Wooder utilizes materials otherwise left behind, rendered
-                            useless in their original intent. By creating new pieces made of
-                            reclaimed barnwood
-                        </p>
-                        <div class="block-link">
-                            <a class="block-link__name">read more</a>
-                            <div class="block-link__icon">
-                                <svg class="icon">
-                                    <use xlink:href="#right-arrow"></use>
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<div class="about-content__subscribe">
+					<div class="block-text">
+						<h2 class="block-text__title">About us</h2>
+						<p class="block-text__subscribe">
+							Wooder utilizes materials otherwise left behind, rendered useless
+							in their original intent. By creating new pieces made of reclaimed
+							barnwood
+						</p>
+						<div class="block-link">
+							<a class="block-link__name">read more</a>
+							<div class="block-link__icon">
+								<svg class="icon">
+									<use xlink:href="#right-arrow"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
