--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -4,9 +4,9 @@
             <div class="footer-date">
                 © 2016 WOODER
             </div>
-            <div class="footer-logo logo">
+            <a class="footer-logo logo" href='#home-arc'>
                 w<span class="o-first">o</span><span class="o-second">o</span>der
-            </div>
+            </a>
             <div class="footer-author">
                 <span>Designed by</span> Viacheslav Olianishyn
             </div>
