--- a/#src/_header.html
+++ b/#src/_header.html
@@ -12,11 +12,14 @@
                     Menu
                 </div>
             </div>
-            <nav class="burger__nav">
-                <a href="" class="nav__link">home</a>
-                <a href="" class="nav__link">products</a>
-                <a href="" class="nav__link">about</a>
-            </nav>
+            <div class="burger__nav_popup">
+                <nav class="burger__nav">
+                    <a href="#home-arc" class="nav__link">home</a>
+                    <a href="#videos-arc" class="nav__link">products</a>
+                    <a href="#about-arc" class="nav__link">about</a>
+                </nav>
+            </div>
+            
         </div>
         <!-- NAVIGATION -->
         <div class="header__navigation navigation">
@@ -25,9 +28,9 @@
                     w<span class="o-first">o</span><span class="o-second">o</span>der
                 </div>
                 <nav class="navigation__nav nav">
-                    <a href="" class="nav__link">home</a>
-                    <a href="" class="nav__link">products</a>
-                    <a href="" class="nav__link">about</a>
+                    <a href="#home-arc" class="nav__link">home</a>
+                    <a href="#videos-arc" class="nav__link">products</a>
+                    <a href="#about-arc" class="nav__link">about</a>
                 </nav>
             </div>
         </div>
