--- a/#src/_intro.html
+++ b/#src/_intro.html
@@ -1,4 +1,4 @@
-<div class="intro__back">
+<div class="intro__back" id="home-arc">
     <div class="intro__back-first"></div>
     <div class="intro__back-second">
         <div class="intro__back_wrapper">
