--- a/#src/_services.html
+++ b/#src/_services.html
@@ -1,6 +1,6 @@
 <section class="services">
 	<!-- furniture block -->
-	<div class="services-block">
+	<div class="services-block serv">
 		<!-- overlay item -->
 		<span class="services-block__f">F</span>
 		<!-- number of blocks -->
