--- a/#src/_sidebar.html
+++ b/#src/_sidebar.html
@@ -4,10 +4,10 @@
             01
         </div>
         <div class="sidebar__controls controls">
-            <a href="" class="controls__item controls__item_active"></a>
-            <a href="" class="controls__item"></a>
-            <a href="" class="controls__item"></a>
-            <a href="" class="controls__item"></a>
+            <a class="controls__item controls__item-1" data-control-to='intro' ></a>
+            <a class="controls__item controls__item-2" data-control-to='serv'></a>
+            <a class="controls__item controls__item-3" data-control-to='videos'></a>
+            <a class="controls__item controls__item-4" data-control-to='about'></a>
         </div>
     </div>
 </section>
