--- a/#src/_video.html
+++ b/#src/_video.html
@@ -1,75 +1,80 @@
 <section class="video">
-    <div class="video-back">
-        <svg class="icon">
-            <use xlink:href="#play-button"></use>
-        </svg>
-    </div>
-    <div class="container-right">
-        <div class="video__inner">
-            <!-- video-item - 1 -->
-            <div class="video-item">
-                <div class="video-subscribe">
-                    <div class="video-lines">
-                        <div class="block-lines__title"></div>
-                        <div class="block-lines__subscribe"></div>
-                    </div>
-                    <div class="video-content">
-                        <div class="video-content__title">we Do the design  of any complexity</div>
-                        <div class="video-content__subtitle">
-                            This is a team of professionals that make the furniture and 
-                            wood décor high standard. Creating modern designs. 
-                            Adhering to the global quality standards. And we are 
-                            doing work with love.
-                        </div>
-                        <div class="video-btn">
-                            <div class="video-btn__icon">
-                                <svg class="icon">
-                                    <use xlink:href="#play-button"></use>
-                                </svg>
-                            </div>
-                            <a src class="video-btn__link"> watch video </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- video-watch -->
-                <div class="video-watch">
-                    <video controls src="../videoplayback.mp4"></video>
-                </div>
-            </div>
-               <!-- video-item - 2  -->
-               <div class="video-item">
-                <div class="video-subscribe">
-                    <div class="video-lines">
-                        <div class="block-lines__title"></div>
-                        <div class="block-lines__subscribe"></div>
-                    </div>
-                    <div class="video-content">
-                        <div class="video-content__title">we Do the design  of any complexity</div>
-                        <div class="video-content__subtitle">
-                            This is a team of professionals that make the furniture and 
-                            wood décor high standard. Creating modern designs. 
-                            Adhering to the global quality standards. And we are 
-                            doing work with love.
-                            This is a team of professionals that make the furniture and 
-                            wood décor high standard. Creating modern designs. 
-                            Adhering to the global quality standards. And we are 
-                            doing work with love.
-                        </div>
-                        <div class="video-btn">
-                            <div class="video-btn__icon">
-                                <svg class="icon">
-                                    <use xlink:href="#play-button"></use>
-                                </svg>
-                            </div>
-                            <a src class="video-btn__link"> watch video </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- video-watch -->
-                <div class="video-watch">
-                    <video controls src="../videoplayback.mp4"></video>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="video-back">
+		<svg class="icon">
+			<use xlink:href="#play-button"></use>
+		</svg>
+	</div>
+	<div class="container-right">
+		<div class="video__inner">
+			<!-- video-item - 1 -->
+			<div class="video-item">
+				<div class="video-subscribe">
+					<div class="video-subscribe_wrapper">
+						<div class="video-lines">
+							<div class="block-lines__title"></div>
+							<div class="block-lines__subscribe"></div>
+						</div>
+						<div class="video-content">
+							<div class="video-content__title">
+								we Do the design of any complexity
+							</div>
+							<div class="video-content__subtitle">
+								This is a team of professionals that make the furniture and wood
+								décor high standard. Creating modern designs. Adhering to the
+								global quality standards. And we are doing work with love.
+							</div>
+							<div class="video-btn">
+								<div class="video-btn__icon">
+									<svg class="icon">
+										<use xlink:href="#play-button"></use>
+									</svg>
+								</div>
+								<a src class="video-btn__link"> watch video </a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- video-watch -->
+				<div class="video-watch">
+					<video controls src="../videoplayback.mp4"></video>
+				</div>
+			</div>
+			<!-- video-item - 2  -->
+			<div class="video-item">
+				<div class="video-subscribe">
+					<div class="video-subscribe_wrapper">
+						<div class="video-lines">
+							<div class="block-lines__title"></div>
+							<div class="block-lines__subscribe"></div>
+						</div>
+						<div class="video-content">
+							<div class="video-content__title">
+								we Do the design of any complexity
+							</div>
+							<div class="video-content__subtitle">
+								This is a team of professionals that make the furniture and wood
+								décor high standard. Creating modern designs. Adhering to the
+								global quality standards. And we are doing work with love. This
+								is a team of professionals that make the furniture and wood
+								décor high standard. Creating modern designs. Adhering to the
+								global quality standards. And we are doing work with love.
+							</div>
+							<div class="video-btn">
+								<div class="video-btn__icon">
+									<svg class="icon">
+										<use xlink:href="#play-button"></use>
+									</svg>
+								</div>
+								<a src class="video-btn__link"> watch video </a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- video-watch -->
+				<div class="video-watch">
+					<video controls src="../vide1231231.mp4"></video>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
