--- a/#src/_videos.html
+++ b/#src/_videos.html
@@ -1,4 +1,4 @@
-<section class="videos">
+<section class="videos" id="videos-arc">
     <div class="container-right">
         <div class="videos__inner">
             <div class="videos__background-letter">V</div>
