scroll to video

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -8,7 +8,7 @@
                 w<span class="o-first">o</span><span class="o-second">o</span>der
             </a>
             <div class="footer-author">
-                <span>Designed by</span> Viacheslav Olianishyn
+                <span>Designed by</span> <a href="">Viacheslav Olianishyn</a> 
             </div>
         </div>
     </div>
