--- a/#src/_header.html
+++ b/#src/_header.html
@@ -41,7 +41,11 @@
                     <svg class="icon">
                         <use xlink:href="#info"></use>
                     </svg>
+                    <div class="lang__info-block">
+                        <p>Fugiat perspiciatis odit quos! <a href="#">Sit</a> </p>
+                    </div>
                 </div>
+              
                 <div class="lang__switcher switcher">
                     <div class="switcher__current">EN</div>
                     <div class="switcher_inner">
